5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4365/executions/1670_1396.log
== TEST (2019-04-16 18:29:30) 
-- CODE:
float(input("valor consumido"))
-- OUTPUT:
Ambrosio Rutra
32.16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:34:33) 
-- CODE:
float(input("valor consumido"))

else:
	
print("valor total", 2)

-- ERROR:
File "XXXX", line 3
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:34:55) 
-- CODE:
float(input("valor consumido"))

else:
     print("valor total", 2)

-- ERROR:
File "XXXX", line 3
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:35:11) 
-- CODE:
float(input("valor consumido"))

else:
	print("valor total", 2)

-- ERROR:
File "XXXX", line 3
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:38:18) 
-- CODE:
float(input("valor consumido"))
float(input("valor consumido"=300*1*100))
float(input("valor consumudo">300*1*0.6))


else:
	print("valor total", 2)

-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:41:00) 
-- CODE:
vc= float(input("Qual o valor consumido?"))
g= vc * 0.1
if (vc<=300):
-- ERROR:
File "XXXX", line 4
    
                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:41:24) 
-- CODE:
vc= float(input("Qual o valor consumido?"))
g= vc * 0.1
if (vc <= 300):
-- ERROR:
File "XXXX", line 4
    
                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:42:36) 
-- CODE:
vc= float(input("Qual o valor consumido?"))
g= vc * 0.1
if (vc <= 300):
	vt = vc + g
else:
	vt = vc
print(round(vt, 2))
-- OUTPUT:
246.95
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:42:40) 
-- CODE:
vc= float(input("Qual o valor consumido?"))
g= vc * 0.1
if (vc <= 300):
	vt = vc + g
else:
	vt = vc
print(round(vt, 2))
-- EXECUTION TIME:
0.153248
-- TEST CASE 1:
---- input:
224.5
---- correct output:
246.95
---- user output:
246.95
-- TEST CASE 2:
---- input:
365.15
---- correct output:
387.06
---- user output:
365.15
-- TEST CASE 3:
---- input:
500
---- correct output:
530.0
---- user output:
500.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:43:51) 
-- CODE:
vc= float(input("Qual o valor consumido?"))
g= vc * 0.1
if (vc <= 300):
	vt = vc + g
else:
	vt = vc
print(round(vt, 2))
-- OUTPUT:
246.95
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:43:54) 
-- CODE:
vc= float(input("Qual o valor consumido?"))
g= vc * 0.1
if (vc <= 300):
	vt = vc + g
else:
	vt = vc
print(round(vt, 2))
-- EXECUTION TIME:
0.171863
-- TEST CASE 1:
---- input:
224.5
---- correct output:
246.95
---- user output:
246.95
-- TEST CASE 2:
---- input:
365.15
---- correct output:
387.06
---- user output:
365.15
-- TEST CASE 3:
---- input:
500
---- correct output:
530.0
---- user output:
500.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:45:09) 
-- CODE:
vc= float(input("Qual o valor consumido?"))
g= vc * 0.1
if (vc <= 300):
	vt = vc + g
else:
	(vt = vc)
print(round(vt, 2))
-- ERROR:
File "XXXX", line 6
    (vt = vc)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:45:19) 
-- CODE:
vc= float(input("Qual o valor consumido?"))
g= vc * 0.1
if (vc <= 300):
	vt = vc + g
else:
	vt = vc
print(round(vt, 2))
-- OUTPUT:
246.95
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:45:26) 
-- CODE:
vc=float(input("Qual o valor consumido?"))
g= vc * 0.1
if (vc <= 300):
	vt = vc + g
else:
	vt = vc
print(round(vt, 2))
-- OUTPUT:
246.95
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:45:29) 
-- CODE:
vc=float(input("Qual o valor consumido?"))
g= vc * 0.1
if (vc <= 300):
	vt = vc + g
else:
	vt = vc
print(round(vt, 2))
-- EXECUTION TIME:
0.134932
-- TEST CASE 1:
---- input:
224.5
---- correct output:
246.95
---- user output:
246.95
-- TEST CASE 2:
---- input:
365.15
---- correct output:
387.06
---- user output:
365.15
-- TEST CASE 3:
---- input:
500
---- correct output:
530.0
---- user output:
500.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:45:37) 
-- CODE:
vc=float(input("Qual o valor consumido?"))
g=vc * 0.1
if (vc <= 300):
	vt = vc + g
else:
	vt = vc
print(round(vt, 2))
-- OUTPUT:
246.95
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:45:44) 
-- CODE:
vc=float(input("Qual o valor consumido?"))
g=vc * 0.1
if(vc <= 300):
	vt = vc + g
else:
	vt = vc
print(round(vt, 2))
-- OUTPUT:
246.95
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:48:05) 
-- CODE:
vc= float(input("Qual o valor consumido?"))
g= vc * 0.1

if (vc <= 300):
	vt = vc + g
else:
	vt = vc
print(round(vt, 2))
-- OUTPUT:
246.95
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:48:08) 
-- CODE:
vc= float(input("Qual o valor consumido?"))
g= vc * 0.1

if (vc <= 300):
	vt = vc + g
else:
	vt = vc
print(round(vt, 2))
-- EXECUTION TIME:
0.202779
-- TEST CASE 1:
---- input:
224.5
---- correct output:
246.95
---- user output:
246.95
-- TEST CASE 2:
---- input:
365.15
---- correct output:
387.06
---- user output:
365.15
-- TEST CASE 3:
---- input:
500
---- correct output:
530.0
---- user output:
500.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:48:09) 
-- CODE:
vc= float(input("Qual o valor consumido?"))
g= vc * 0.1

if (vc <= 300):
	vt = vc + g
else:
	vt = vc
print(round(vt, 2))
-- OUTPUT:
246.95
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:48:25) 
-- CODE:
vc= float(input("Qual o valor consumido?"))
g= vc * 0.1

if (vc <= 300):
	vt = vc + g
else:
	vt = vc
print(round(vt, 2))
-- EXECUTION TIME:
0.161486
-- TEST CASE 1:
---- input:
224.5
---- correct output:
246.95
---- user output:
246.95
-- TEST CASE 2:
---- input:
365.15
---- correct output:
387.06
---- user output:
365.15
-- TEST CASE 3:
---- input:
500
---- correct output:
530.0
---- user output:
500.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:48:47) 
-- CODE:
vc= float(input("Qual o valor consumido?"))
g= vc * 0.1

if (vc <= 300):
	vt = (vc + g)
else:
	vt = vc
print(round(vt, 2))
-- OUTPUT:
246.95
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:48:50) 
-- CODE:
vc= float(input("Qual o valor consumido?"))
g= vc * 0.1

if (vc <= 300):
	vt = (vc + g)
else:
	vt = vc
print(round(vt, 2))
-- EXECUTION TIME:
0.154792
-- TEST CASE 1:
---- input:
224.5
---- correct output:
246.95
---- user output:
246.95
-- TEST CASE 2:
---- input:
365.15
---- correct output:
387.06
---- user output:
365.15
-- TEST CASE 3:
---- input:
500
---- correct output:
530.0
---- user output:
500.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:51:24) 
-- CODE:
vc= float(input("Qual o valor consumido?"))
g= vc * 0.1
f= vc * 0.6
if (vc <= 300):
	vt = vc + g
else:
	vt = vc
print(round(vt, 2))
-- OUTPUT:
246.95
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:51:27) 
-- CODE:
vc= float(input("Qual o valor consumido?"))
g= vc * 0.1
f= vc * 0.6
if (vc <= 300):
	vt = vc + g
else:
	vt = vc
print(round(vt, 2))
-- EXECUTION TIME:
0.164418
-- TEST CASE 1:
---- input:
224.5
---- correct output:
246.95
---- user output:
246.95
-- TEST CASE 2:
---- input:
365.15
---- correct output:
387.06
---- user output:
365.15
-- TEST CASE 3:
---- input:
500
---- correct output:
530.0
---- user output:
500.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:51:30) 
-- CODE:
vc= float(input("Qual o valor consumido?"))
g= vc * 0.1
f= vc * 0.6
if (vc <= 300):
	vt = vc + g
else:
	vt = vc
print(round(vt, 2))
-- EXECUTION TIME:
0.265135
-- TEST CASE 1:
---- input:
224.5
---- correct output:
246.95
---- user output:
246.95
-- TEST CASE 2:
---- input:
365.15
---- correct output:
387.06
---- user output:
365.15
-- TEST CASE 3:
---- input:
500
---- correct output:
530.0
---- user output:
500.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:51:31) 
-- CODE:
vc= float(input("Qual o valor consumido?"))
g= vc * 0.1
f= vc * 0.6
if (vc <= 300):
	vt = vc + g
else:
	vt = vc
print(round(vt, 2))
-- OUTPUT:
246.95
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:52:26) 
-- CODE:
vc= float(input("Qual o valor consumido?"))
g= vc * 0.1

if (vc <= 300):
	vt = vc + g
else:
	vt = vc
print(vt, 2)
-- OUTPUT:
246.95 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:52:29) 
-- CODE:
vc= float(input("Qual o valor consumido?"))
g= vc * 0.1

if (vc <= 300):
	vt = vc + g
else:
	vt = vc
print(vt, 2)
-- EXECUTION TIME:
0.188524
-- TEST CASE 1:
---- input:
224.5
---- correct output:
246.95
---- user output:
246.95 2
-- TEST CASE 2:
---- input:
365.15
---- correct output:
387.06
---- user output:
365.15 2
-- TEST CASE 3:
---- input:
500
---- correct output:
530.0
---- user output:
500.0 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
